--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@
 
 services:
   mindsdb:
+    container_name: mindsdb
     image: mindsdb/mindsdb
     ports:
       - "47334:47334"
@@ -11,6 +12,7 @@ services:
       - demo-network
 
   redpanda:
+    container_name: redpanda
     image: vectorized/redpanda
     ports:
       - "9092:9092"
@@ -27,6 +29,7 @@ services:
       - demo-network
 
   cassandra:
+    container_name: cassandra
     image: cassandra:latest
     ports:
       - "9042:9042"
@@ -34,6 +37,7 @@ services:
       - demo-network
 
   postgres:
+    container_name: postgres
     image: postgres:latest
     environment:
       POSTGRES_USER: postgres
